@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-26T08:12:33Z",
-  "count_outdated" : 2607,
-  "uniques_outdated" : 989,
+  "timestamp" : "2023-07-26T16:12:24Z",
+  "count_outdated" : 2609,
+  "uniques_outdated" : 990,
   "count" : 2635,
   "uniques" : 1004,
   "clones" : [
-    {
-      "timestamp": "2023-07-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-13T00:00:00Z",
       "count": 2,
