@@ -1,12 +1,7 @@
 {
-  "count": 27,
+  "count": 26,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2023-07-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-13T00:00:00Z",
       "count": 2,
